# hackathon

./: project-research.md
agent/: .env.example  .gitignore  README.md  requirements.txt
agent/agent/: __main__.py  artifacts.py  config.py  content_generation.py  main.py  pipeline.py  store.py  summarizer.py  transcription.py  vision.py
agent/tests/: test_pipeline_integration.py  test_summarizer_prompts.py  test_vision_dedupe.py
content-generation-api/: .env.example  README.md  pyproject.toml
content-generation-api/app/: dependencies.py  main.py
content-generation-api/storage/: sample-transcript.md
meet-main/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
meet-main/app/: layout.tsx  page.tsx
meet-main/components/: CodaMark.tsx
meet-main/lib/: CameraSettings.tsx  WorldGalleryModal.tsx  WorldWorkspace.tsx  aiAgentServer.ts  aiSessionClient.test.ts  aiSessionClient.ts  connectionDetailsValidation.test.ts  connectionDetailsValidation.ts  contentApi.ts  dataChannelTypes.ts  db.ts  livekitToken.ts  mediaSupport.test.ts  mediaSupport.ts  types.ts  useBrowserSpeechTranscription.ts  useCursorSync.ts  useHostGate.ts  useTourSync.ts  useWorkspaceSync.ts  useWorldSession.tsx  worldGallery.test.ts  worldGallery.ts  worldHarnessProtocol.ts  worldStore.ts
meet-main/styles/: Coda.module.css  (+5 more)
notebooklm-api/: pyproject.toml
notebooklm-api/app/: config.py  main.py
notebooklm-api/app/routers/: auth.py  chat.py  notebooks.py
notebooklm-api/app/schemas/: artifact.py  chat.py  notebook.py
notebooklm-api/app/services/: client_service.py
(+23 files in other folders)
